--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -36,13 +36,13 @@
 
     <script type="text/javascript" src="ui/controladores/loginController.js"></script>
     <script type="text/javascript" src="ui/servicios/core-service.js"></script>
-    <script type="text/javascript" src="ui/controladores/perfilController.js"></script>
-    <script type="text/javascript" src="ui/controladores/PerfilService.js"></script>
+    <script type="text/javascript" src="ui/controladores/homeController.js"></script>
+    <script type="text/javascript" src="ui/controladores/homeService.js"></script>
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="ui/vistas/crearUsuario.css">
-    <link rel="stylesheet" type="text/css" href="ui/vistas/perfil.css">
+    <link rel="stylesheet" type="text/css" href="ui/vistas/home.css">
     <link rel="stylesheet" type="text/css" href="ui/modulos/ordenes/ordenes.css">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
