--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -36,13 +36,10 @@
 
     <script type="text/javascript" src="ui/controladores/loginController.js"></script>
     <script type="text/javascript" src="ui/servicios/core-service.js"></script>
-    <script type="text/javascript" src="ui/controladores/homeController.js"></script>
-    <script type="text/javascript" src="ui/controladores/homeService.js"></script>
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="ui/vistas/crearUsuario.css">
-    <link rel="stylesheet" type="text/css" href="ui/vistas/home.css">
     <link rel="stylesheet" type="text/css" href="ui/modulos/ordenes/ordenes.css">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -73,13 +70,10 @@
                     </ul>
                 </li>
             </ul>
-            <form class="navbar-form navbar-left">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
-                </div>
-                <button type="submit" class="btn btn-default">Submit</button>
-            </form>
             <ul class="nav navbar-nav navbar-right">
+        
+                 <li style="margin-top: 5px;"><img src="campanaNotificacion.png" style="width:40px;" alt=""></li>
+                 <li style="margin-top: 5px;"><img src="campana.png" style="width:40px;" alt=""></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ userData().username || 'No autenticad@'}} <span class="caret"></span></a>
                     <ul class="dropdown-menu">
@@ -91,7 +85,7 @@
         </div>
     </div>
 </nav>
-<body ng-app="trabajoIntegrador">  <!--Modulo de Angular I> -->
-<div style="height: 100%; width: 100%" ng-view=""></div>
+<body ng-app="trabajoIntegrador" style="overflow:hidden ;">  <!--Modulo de Angular I> -->
+<div style="height: 100%; width: 100%;" ng-view=""></div>
 </body>
 </html>
