--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Spitale-Gaido">
@@ -7,6 +8,7 @@
     <script type="text/javascript" src="ui/lib/angular/angular.min.js"></script>
     <script type="text/javascript" src="ui/lib/angular-route/angular-route.min.js"></script>
 
+    
     <link href="ui/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="ui/lib/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="ui/lib/font-awesome/css/fontawesome.min.css" rel="stylesheet">
@@ -50,7 +52,8 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -63,29 +66,56 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Administracion <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                        aria-expanded="false">Administracion <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a ng-click = "relocate('ordenes')">Ordenes</a></li>
+                        <li><a ng-click="relocate('ordenes')">Ordenes</a></li>
                         <li><a href="#">Cargas</a></li>
                     </ul>
                 </li>
             </ul>
             <ul ng-init="pedirAlarmas()" class="nav navbar-nav navbar-right">
-        
-                 <li ng-show="existeAlarma()" style="margin-top: 5px;"><img src="campanaNotificacion.png" style="width:40px;" alt=""></li>
-                 <li ng-show="!existeAlarma()" style="margin-top: 5px;"><img src="campana.png" style="width:40px;" alt=""></li>
+
+                <li ng-show="existeAlarma()" class="dropdown">
+                    <a href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img
+                            src="campanaNotificacion.png" style="width:40px;padding: 0px!important;" alt=""> <span
+                            class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li ng-repeat="alarm in listaAlarmas" value="{{alarm}}">
+                            <a ng-mousemove="$scope.notificacionAprobacion()" style="color: black; cursor: pointer; border-width: 1px;border-right: black solid;border-bottom: black solid;border-left: black solid; border-radius: 5px;">
+                                {{alarm.descripcion}}</a>
+                        </li>
+                    </ul>
+                </li>
+                <li ng-show="!existeAlarma()" class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                        aria-expanded="false"><img src="campana.png" style="width:40px;" alt=""> <span
+                            class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a ng-click="relocate('ordenes')">Ordenes</a></li>
+                        <li><a href="#">Cargas</a></li>
+                    </ul>
+                </li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ userData().username || 'No autenticad@'}} <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                        aria-expanded="false">{{ userData().username || 'No autenticad@'}} <span
+                            class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Cuenta</a></li>
-                        <li><a ng-click = "logout()">Cerrar sesion</a></li>
+                        <li><a ng-click="logout()">Cerrar sesion</a></li>
                     </ul>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
-<body ng-app="trabajoIntegrador" style="overflow:hidden ;">  <!--Modulo de Angular I> -->
-<div style="height: 100%; width: 100%;" ng-view=""></div>
+
+<body ng-app="trabajoIntegrador" style="overflow:hidden ;">
+    <!--Modulo de Angular I> -->
+    <div style="height: 100%; width: 100%;" ng-view=""></div>
 </body>
+
 </html>
+
+
+<!--  <li><a ng-click = "relocate('ordenes')">Ordenes</a></li>-->
