Creada interfaz para conciliacion para ordenes en estado 4
Signed-off-by: Pablo592 <pgaido524@alumnos.iua.edu.ar>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,10 +33,15 @@
     <script type="text/javascript" src="ui/interceptores.js"></script>
 
     <script type="text/javascript" src="ui/modulos/ordenes-modulo.js"></script>
+    <script type="text/javascript" src="ui/modulos/conciliacion-modulo.js"></script>
     <script type="text/javascript" src="ui/controladores/ordenes-controller.js"></script>
-    <script type="text/javascript" src="ui/servicios/ordenes-service.html.js"></script>
+    <script type="text/javascript" src="ui/servicios/ordenes-service.js"></script>
+    <script type="text/javascript" src="ui/servicios/conciliacion-service.js"></script>
+
 
     <script type="text/javascript" src="ui/controladores/loginController.js"></script>
+    <script type="text/javascript" src="ui/controladores/conciliacionController.js"></script>
+
     <script type="text/javascript" src="ui/servicios/core-service.js"></script>
 
 
@@ -44,6 +49,7 @@
     <link rel="stylesheet" type="text/css" href="ui/vistas/index.css">
     <link rel="stylesheet" type="text/css" href="ui/vistas/crearUsuario.css">
     <link rel="stylesheet" type="text/css" href="ui/vistas/ordenes.css">
+    <link rel="stylesheet" type="text/css" href="ui/vistas/conciliacion.css">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
