--- a/src/main/webapp/ui/vistas/login.html
+++ b/src/main/webapp/ui/vistas/login.html
@@ -1,7 +1,7 @@
 <div class="modal-header">
     <h3 class="modal-title">{{title}}</h3>
 </div>
-<div class="cuerpo">
+<div class="cuerpoo">
     <div class="paquete">
 
         <div class="portaFoto">
