implementado el grafico en tiempo real usando el socket
Signed-off-by: Pablo592 <pgaido524@alumnos.iua.edu.ar>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -42,7 +42,6 @@
     <script type="text/javascript" src="ui/controladores/ordenes-controller.js"></script>
     <script type="text/javascript" src="ui/servicios/ordenes-service.js"></script>
     <script type="text/javascript" src="ui/servicios/conciliacion-service.js"></script>
-    <script type="text/javascript" src="ui/servicios/ws.service.js"></script>
     <script type="text/javascript" src="ui/servicios/graficos-service.js"></script>
 
 
@@ -60,6 +59,7 @@
     <link rel="stylesheet" type="text/css" href="ui/vistas/crearUsuario.css">
     <link rel="stylesheet" type="text/css" href="ui/vistas/ordenes.css">
     <link rel="stylesheet" type="text/css" href="ui/vistas/conciliacion.css">
+    <link rel="stylesheet" type="text/css" href="ui/vistas/graficos.css">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
