--- a/src/main/webapp/ui/vistas/ordenes.html
+++ b/src/main/webapp/ui/vistas/ordenes.html
@@ -296,7 +296,7 @@
             <div ng-click="openConciliacion(list)" class="celda"><img class="imagen"
                     src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvpt6spFV3pDKV36GRdIijPno83SjH9mKa_A&usqp=CAU"
                     alt=""></div>
-            <div class="celda"><img class="imagen" src="https://cdn-icons-png.flaticon.com/512/58/58976.png" alt="">
+            <div ng-click="openGrafica(list)" class="celda"><img class="imagen" src="https://cdn-icons-png.flaticon.com/512/58/58976.png" alt="">
             </div>
             <div class="espacioVacio"></div>
         </div>
