--- a/src/main/webapp/ui/vistas/crearUsuario.html
+++ b/src/main/webapp/ui/vistas/crearUsuario.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head></head>
-    <body>
-        <div class="cuerpo">
-            <div class="paquete">
+
+<head></head>
+
+<body>
+    <div class="cuerpo">
+        <div class="paquete">
             <div class="items">
                 <div class="textos">
                     <div class="col-12 item  bg-light text-dark">
@@ -12,7 +14,8 @@
                 </div>
                 <div class="seccion">
                     <div class="input-group mb-3 item entrada">
-                        <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                        <input type="text" class="form-control" placeholder=""
+                            aria-label="Example text with button addon" aria-describedby="button-addon1">
                     </div>
                 </div>
                 <div class="spam">
@@ -27,7 +30,8 @@
                 </div>
                 <div class="seccion">
                     <div class="input-group mb-3 item entrada">
-                        <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                        <input type="text" class="form-control" placeholder=""
+                            aria-label="Example text with button addon" aria-describedby="button-addon1">
                     </div>
                 </div>
                 <div class="spam">
@@ -42,7 +46,8 @@
                 </div>
                 <div class="seccion">
                     <div class="input-group mb-3 item entrada">
-                        <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                        <input type="text" class="form-control" placeholder=""
+                            aria-label="Example text with button addon" aria-describedby="button-addon1">
                     </div>
                 </div>
                 <div class="spam">
@@ -57,7 +62,8 @@
                 </div>
                 <div class="seccion">
                     <div class="input-group mb-3 item entrada">
-                        <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                        <input type="text" class="form-control" placeholder=""
+                            aria-label="Example text with button addon" aria-describedby="button-addon1">
                     </div>
                 </div>
                 <div class="spam">
@@ -72,36 +78,39 @@
                 </div>
                 <div class="seccion">
                     <div class="input-group mb-3 item entrada">
-                        <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                        <input type="text" class="form-control" placeholder=""
+                            aria-label="Example text with button addon" aria-describedby="button-addon1">
                     </div>
                 </div>
                 <div class="spam">
                     <span class="form-text alertas">dwdwdwdwddw</span>
                 </div>
             </div>
-                <div class="items">
-                    <div class="textos">
-                        <div class="col-12 item  bg-light text-dark">
-                            <label class="col-12 ">Seleccione el rol que desempeñará</label>
-                        </div>
-                    </div>
-                    <div class="seccion">
-                            <select class="input-group mb-3 form-control item entrada" id="floatingSelect" aria-label="Floating label select example">
-                                <option selected></option>
-                                <option value="1">Estandard</option>
-                                <option value="2">Administrador</option>
-                            </select>
-                    </div>
-                    <div class="spam">
-                        <span class="form-text alertas">dwdwdwdwddw</span>
+            <div class="items">
+                <div class="textos">
+                    <div class="col-12 item  bg-light text-dark">
+                        <label class="col-12 ">Seleccione el rol que desempeñará</label>
                     </div>
                 </div>
-                <div class="registrase">
-                    <button type="button" class="btn btn-secondary boton">Registrarse</button>
+                <div class="seccion">
+                    <select class="input-group mb-3 form-control item entrada" id="floatingSelect"
+                        aria-label="Floating label select example">
+                        <option selected></option>
+                        <option value="1">Estandard</option>
+                        <option value="2">Administrador</option>
+                    </select>
+                </div>
+                <div class="spam">
+                    <span class="form-text alertas">dwdwdwdwddw</span>
                 </div>
             </div>
+            <div class="registrase">
+                <button type="button" class="btn btn-secondary boton">Registrarse</button>
+            </div>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
 
 
