--- a/src/main/webapp/ui/vistas/graficos.html
+++ b/src/main/webapp/ui/vistas/graficos.html
@@ -1,12 +1,14 @@
 <div class="cuerpoGrafico">
 
-	<div class="sectorGrafica">
+	<div ng-show="calculoTiempoRestante() > 0" class="sectoTiempoRestanteGrafico">
+		Tiempo restante: {{calculoTiempoRestante()}} (Minutos)
+	</div>
 
+	<div class="sectorGrafica">
 		<canvas class="chart chart-bar" chart-options="graphOptions.demo.options"
 			chart-data="graphOptions.demo.data.data" chart-labels="graphOptions.demo.data.labels" height="80px"
 			width="100%">
 		</canvas>
-
 	</div>
 	<div class="sectorBoton">
 
