--- a/src/main/webapp/ui/vistas/ordenes.html
+++ b/src/main/webapp/ui/vistas/ordenes.html
@@ -286,7 +286,7 @@
             <div class="celda">{{list.ultimaTemperaturaProductoCelcius}}</div>
             <div class="celda">{{list.ultimaDensidadProductoKilogramoMetroCub}}</div>
             <div class="celda">{{list.ultimoCaudalLitroSegundo}}</div>
-            <div class="celda">{{calculoTiempoTranscurrido(list.fechaPesajeInicial,list.fechaFinProcesoCarga)}}
+            <div class="celda">{{calculoTiempoTranscurrido(list.fechaInicioProcesoCarga)}}
             </div>
             <div class="celda">
                 {{calculoTiempoRestante(list.ultimoCaudalLitroSegundo,list.ultimaDensidadProductoKilogramoMetroCub,list.camion.preset,list.masaAcumuladaKg,list.estado)}}
