--- a/bin/bin/src/main/webapp/ui/index.html
+++ b/bin/bin/src/main/webapp/ui/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Hola desde mi pagina html</h1>
     <a href = "/productos">Productos</a></br>
-    <a href = "/test">Test</a><br>
+    <a href = "/produccion">Test</a><br>
     
 </body>
 </html>
