--- a/src/main/webapp/ui/vistas/ordenes.html
+++ b/src/main/webapp/ui/vistas/ordenes.html
@@ -399,15 +399,20 @@
       </div>
     </div>
   </div>
-  <div class="searchOrdenes">
-    <input
-      ng-model="textoBuscado.codigoExterno"
-      type="text"
-      class="form-control"
-      placeholder="Buscar por codigo externo"
-      aria-label="Example text with button addon"
-      aria-describedby="button-addon1"
-    />
+  <div class="BuscarRefrescar">
+    <div class="searchOrdenes">
+      <input
+        ng-model="textoBuscado.codigoExterno"
+        type="text"
+        class="form-control"
+        placeholder="Buscar por codigo externo"
+        aria-label="Example text with button addon"
+        aria-describedby="button-addon1"
+      />
+    </div>
+    <div>
+      <button class="botonRefrescar">Refrescar</button>
+    </div>
   </div>
 
   <div class="tabla">
