--- a/src/main/webapp/ui/vistas/crearUsuario.html
+++ b/src/main/webapp/ui/vistas/crearUsuario.html
@@ -8,90 +8,60 @@
       </div>
       <div class="seccion">
         <div class="input-group mb-3 item entrada">
-          <input 
-            ng-model="usuarioACrear.nombre" 
-            type="text"
-            class="form-control"
-            placeholder=""
-            aria-label="Example text with button addon"
-            aria-describedby="button-addon1"
-          />
+          <input ng-model="usuarioACrear.nombre" type="text" class="form-control" placeholder=""
+            aria-label="Example text with button addon" aria-describedby="button-addon1" />
         </div>
       </div>
     </div>
     <div class="items">
       <div class="textos">
         <div class="col-12 item bg-light text-dark">
-          <label  class="col-12">Ingrese su apellido</label>
+          <label class="col-12">Ingrese su apellido</label>
         </div>
       </div>
       <div class="seccion">
         <div class="input-group mb-3 item entrada">
-          <input
-          ng-model="usuarioACrear.apellido"
-            type="text"
-            class="form-control"
-            placeholder=""
-            aria-label="Example text with button addon"
-            aria-describedby="button-addon1"
-          />
+          <input ng-model="usuarioACrear.apellido" type="text" class="form-control" placeholder=""
+            aria-label="Example text with button addon" aria-describedby="button-addon1" />
         </div>
       </div>
     </div>
     <div class="items">
       <div class="textos">
         <div class="col-12 item bg-light text-dark">
-          <label  class="col-12">Ingrese su email</label>
+          <label class="col-12">Ingrese su email</label>
         </div>
       </div>
       <div class="seccion">
         <div class="input-group mb-3 item entrada">
-          <input
-          ng-model="usuarioACrear.email"
-            type="text"
-            class="form-control"
-            placeholder=""
-            aria-label="Example text with button addon"
-            aria-describedby="button-addon1"
-          />
+          <input ng-model="usuarioACrear.email" type="text" class="form-control" placeholder=""
+            aria-label="Example text with button addon" aria-describedby="button-addon1" />
         </div>
       </div>
     </div>
     <div class="items">
       <div class="textos">
         <div class="col-12 item bg-light text-dark">
-          <label  class="col-12">Ingrese su contraseña</label>
+          <label class="col-12">Ingrese su contraseña</label>
         </div>
       </div>
       <div class="seccion">
         <div class="input-group mb-3 item entrada">
-          <input
-          ng-model="usuarioACrear.password"
-            type="text"
-            class="form-control"
-            placeholder=""
-            aria-label="Example text with button addon"
-            aria-describedby="button-addon1"
-          />
+          <input ng-model="usuarioACrear.password" type="text" class="form-control" placeholder=""
+            aria-label="Example text with button addon" aria-describedby="button-addon1" />
         </div>
       </div>
     </div>
     <div class="items">
       <div class="textos">
         <div class="col-12 item bg-light text-dark">
-          <label  class="col-12">Ingrese su usuario</label>
+          <label class="col-12">Ingrese su usuario</label>
         </div>
       </div>
       <div class="seccion">
         <div class="input-group mb-3 item entrada">
-          <input
-          ng-model="usuarioACrear.username"
-            type="text"
-            class="form-control"
-            placeholder=""
-            aria-label="Example text with button addon"
-            aria-describedby="button-addon1"
-          />
+          <input ng-model="usuarioACrear.username" type="text" class="form-control" placeholder=""
+            aria-label="Example text with button addon" aria-describedby="button-addon1" />
         </div>
       </div>
     </div>
@@ -102,21 +72,22 @@
         </div>
       </div>
       <div class="seccion">
-        <select ng-model="usuarioACrear.roles[0].id"
-          class="input-group mb-3 form-control item entrada"
-          id="floatingSelect"
-          aria-label="Floating label select example">
+        <select ng-model="usuarioACrear.roles[0].id" class="input-group mb-3 form-control item entrada"
+          id="floatingSelect" aria-label="Floating label select example">
           <option selected></option>
           <option value="1">Estandard</option>
           <option value="2">Administrador</option>
         </select>
       </div>
     </div>
-    <div class="registrase">
-      <button ng-click="crearUsaurio()" type="button" class="btn btn-secondary boton">
-        Crear usuario
-      </button>
-      <br />
+    <div class="crearUsuarioBotones">
+      <div>
+        <button ng-click="volver()" type="button" class="btn btn-danger">Cancelar</button>
+      </div>
+      <div class="espacioVacio"></div>
+      <div>
+        <button ng-click="crearUsaurio()" type="button" class="btn btn-success">Crear usuario</button>
+      </div>
     </div>
   </div>
 </body>
